[gd_scene load_steps=5 format=3 uid="uid://bv2l2sim1wevf"]

[ext_resource type="Script" path="res://Scripts/shop_gui.gd" id="1_nja2r"]
[ext_resource type="Texture2D" uid="uid://w0rulu25f2me" path="res://Assets/Sprites/UI/Shop_Background.png" id="2_yai3k"]
[ext_resource type="PackedScene" uid="uid://j1eleppaqkfr" path="res://Scenes/shop_slot.tscn" id="3_o0dkt"]
[ext_resource type="PackedScene" uid="uid://7pbpaipl6xhg" path="res://Scenes/cursor.tscn" id="4_h0o8q"]

[node name="Shop_GUI" type="Control"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_nja2r")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 1125.0
offset_bottom = 400.0
texture = ExtResource("2_yai3k")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 48.0
offset_top = 42.0
offset_right = 304.665
offset_bottom = 170.405
scale = Vector2(4.01, 2.48)
columns = 4

[node name="Shop_Slot" parent="NinePatchRect/GridContainer" instance=ExtResource("3_o0dkt")]
layout_mode = 2

[node name="Shop_Slot2" parent="NinePatchRect/GridContainer" instance=ExtResource("3_o0dkt")]
layout_mode = 2

[node name="Shop_Slot3" parent="NinePatchRect/GridContainer" instance=ExtResource("3_o0dkt")]
layout_mode = 2

[node name="Shop_Slot4" parent="NinePatchRect/GridContainer" instance=ExtResource("3_o0dkt")]
layout_mode = 2

[node name="Shop_Slot5" parent="NinePatchRect/GridContainer" instance=ExtResource("3_o0dkt")]
layout_mode = 2

[node name="Shop_Slot6" parent="NinePatchRect/GridContainer" instance=ExtResource("3_o0dkt")]
layout_mode = 2

[node name="Shop_Slot7" parent="NinePatchRect/GridContainer" instance=ExtResource("3_o0dkt")]
layout_mode = 2

[node name="Shop_Slot8" parent="NinePatchRect/GridContainer" instance=ExtResource("3_o0dkt")]
layout_mode = 2

[node name="Cursor" parent="." instance=ExtResource("4_h0o8q")]
layout_mode = 0
offset_left = 48.0
offset_top = 42.0
offset_right = 176.0
offset_bottom = 170.0
menu_parent_path = NodePath("../NinePatchRect/GridContainer")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="button_pressed" from="NinePatchRect/GridContainer/Shop_Slot" to="." method="_on_shop_slot_button_pressed"]
[connection signal="cursor_selected" from="NinePatchRect/GridContainer/Shop_Slot" to="." method="_on_shop_slot_cursor_selected"]
[connection signal="button_pressed" from="NinePatchRect/GridContainer/Shop_Slot2" to="." method="_on_shop_slot_2_button_pressed"]
[connection signal="cursor_selected" from="NinePatchRect/GridContainer/Shop_Slot2" to="." method="_on_shop_slot_2_cursor_selected"]
[connection signal="button_pressed" from="NinePatchRect/GridContainer/Shop_Slot3" to="." method="_on_shop_slot_3_button_pressed"]
[connection signal="cursor_selected" from="NinePatchRect/GridContainer/Shop_Slot3" to="." method="_on_shop_slot_3_cursor_selected"]
[connection signal="button_pressed" from="NinePatchRect/GridContainer/Shop_Slot4" to="." method="_on_shop_slot_4_button_pressed"]
[connection signal="cursor_selected" from="NinePatchRect/GridContainer/Shop_Slot4" to="." method="_on_shop_slot_4_cursor_selected"]
[connection signal="button_pressed" from="NinePatchRect/GridContainer/Shop_Slot5" to="." method="_on_shop_slot_5_button_pressed"]
[connection signal="cursor_selected" from="NinePatchRect/GridContainer/Shop_Slot5" to="." method="_on_shop_slot_5_cursor_selected"]
[connection signal="button_pressed" from="NinePatchRect/GridContainer/Shop_Slot6" to="." method="_on_shop_slot_6_button_pressed"]
[connection signal="cursor_selected" from="NinePatchRect/GridContainer/Shop_Slot6" to="." method="_on_shop_slot_6_cursor_selected"]
[connection signal="button_pressed" from="NinePatchRect/GridContainer/Shop_Slot7" to="." method="_on_shop_slot_7_button_pressed"]
[connection signal="cursor_selected" from="NinePatchRect/GridContainer/Shop_Slot7" to="." method="_on_shop_slot_7_cursor_selected"]
[connection signal="button_pressed" from="NinePatchRect/GridContainer/Shop_Slot8" to="." method="_on_shop_slot_8_button_pressed"]
[connection signal="cursor_selected" from="NinePatchRect/GridContainer/Shop_Slot8" to="." method="_on_shop_slot_8_cursor_selected"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
